Fix spacing

--- a/src/styles/components/subcomponents/site-specific/optifineforfabric.css
+++ b/src/styles/components/subcomponents/site-specific/optifineforfabric.css
@@ -388,6 +388,6 @@
   font-size: 0.85rem;
 }
 
-.tag-list {
+.tech-tag-list {
   margin-bottom: var(--space-3);
 }
